[gd_scene load_steps=5 format=3 uid="uid://b7smhakpc6bxh"]

[ext_resource type="Texture2D" uid="uid://bl6qq6ah62p24" path="res://icon.svg" id="1_amla7"]
[ext_resource type="Script" path="res://shop_item.gd" id="1_cbvqj"]
[ext_resource type="Script" path="res://confirm_button.gd" id="3_b84ld"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_aee75"]

[node name="ShopItem" type="PanelContainer"]
offset_top = 221.0
offset_right = 128.0
offset_bottom = 221.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_aee75")
script = ExtResource("1_cbvqj")

[node name="ShopItem" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Icon" type="Control" parent="ShopItem"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="Sprite" type="Sprite2D" parent="ShopItem/Icon"]
unique_name_in_owner = true
texture = ExtResource("1_amla7")
centered = false

[node name="Sticker" type="Polygon2D" parent="ShopItem/Icon"]
unique_name_in_owner = true
z_index = 1
position = Vector2(108, 20)
rotation = 0.174533
polygon = PackedVector2Array(40, 0, 39.1259, 2.98873, 36.5418, 5.84684, 32.3607, 8.44941, 26.7652, 10.6827, 20, 12.4491, 12.3607, 13.6714, 4.18114, 14.2963, -4.18114, 14.2963, -12.3607, 13.6714, -20, 12.4491, -26.7652, 10.6827, -32.3607, 8.44941, -36.5418, 5.84684, -39.1259, 2.98873, -40, 1.76043e-15, -39.1259, -2.98873, -36.5418, -5.84684, -32.3607, -8.44941, -26.7652, -10.6827, -20, -12.4491, -12.3607, -13.6714, -4.18114, -14.2963, 4.18114, -14.2963, 12.3607, -13.6714, 20, -12.4491, 26.7652, -10.6827, 32.3607, -8.44941, 36.5418, -5.84684, 39.1259, -2.98873)

[node name="StickerLabel" type="Label" parent="ShopItem/Icon/Sticker"]
unique_name_in_owner = true
offset_left = -32.0
offset_top = -11.5
offset_right = 32.0
offset_bottom = 11.5
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Sold out"
horizontal_alignment = 1

[node name="Name" type="Label" parent="ShopItem"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 1

[node name="Price" type="Label" parent="ShopItem"]
unique_name_in_owner = true
layout_mode = 2
text = "0.00 tADA"
horizontal_alignment = 1

[node name="BuyButton" type="Button" parent="ShopItem"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "Buy"
script = ExtResource("3_b84ld")

[connection signal="confirmed" from="ShopItem/BuyButton" to="." method="_on_buy_confirmed"]
